# sw2urdf_ROS2

./: LICENSE  README.md  README_en.md  README_zh.md  dir_ros2.py  insert_content.txt  insert_urdf.txt  zip_ros2.py
arm_description/: CMakeLists.txt  package.xml
arm_description/launch/: display.launch  display.launch.py  gazebo.launch  gazebo.launch.py
arm_description/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7.STL  link8.STL
arm_description/urdf/: arm_description.csv  arm_description.urdf
